--- a/assets/stylesheets/estilos.css
+++ b/assets/stylesheets/estilos.css
@@ -34,9 +34,12 @@ h1{
     cursor: pointer;
     width: 100px;
     height: 40px;
-    color: rgb(83, 89, 168);
+    font-weight: bold;
+    color: #0e2d83;
+    background-color: rgb(168, 123, 241);
+    border-color: rgb(72, 42, 100);
     border-radius: 10%;
-}
+}   
 
 .form-control{
     display: flex;
